tests/baselines/reference/mismatchedExplicitTypeParameterAndArgumentType.errors.txt
mismatchedExplicitTypeParameterAndArgumentType.ts(10,34): error TS2322: Type 'string' is not assignable to type 'number'.
mismatchedExplicitTypeParameterAndArgumentType.ts(11,15): error TS2558: Expected 2 type arguments, but got 1.


==== mismatchedExplicitTypeParameterAndArgumentType.ts (2 errors) ====
    function map<T, U>(xs: T[], f: (x: T) => U) {
        var ys: U[] = [];
        xs.forEach(x => ys.push(f(x)));
        return ys;
    }
    
    var r0 = map([1, ""], (x) => x.toString());
    var r5 = map<any, any>([1, ""], (x) => x.toString());
    var r6 = map<Object, Object>([1, ""], (x) => x.toString());
    var r7 = map<number, string>([1, ""], (x) => x.toString()); // error
                                     ~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    var r7b = map<number>([1, ""], (x) => x.toString()); // error
                  ~~~~~~
!!! error TS2558: Expected 2 type arguments, but got 1.
    var r8 = map<any, string>([1, ""], (x) => x.toString());